--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,13 @@ pom.xml.versionsBackup
 .classpath
 .project
 # .settings : we need Eclipse settings for code formatter and clean-up rules
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.m2e.core.prefs
 target
 .cache
 dependency-reduced-pom.xml
+.apt_generated
+.apt_generated_tests
 
 # Intellij
 .idea
