--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -4,6 +4,7 @@ sources:
     modules:
       - lombok
       - jar_artifact
+      - integration_tests
 
 linkReplacements:
   - "https://awhitford.github.com/lombok.maven/lombok-maven-plugin/|http://anthonywhitford.com/lombok.maven/lombok-maven-plugin/"
