--- a/pom.xml
+++ b/pom.xml
@@ -97,15 +97,16 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <artifactId>lombok</artifactId>
-            <groupId>org.projectlombok</groupId>
-            <version>1.18.20</version>
-            <scope>provided</scope>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
+					<plugin>
+						    <groupId>org.apache.maven.plugins</groupId>
+						    <artifactId>maven-failsafe-plugin</artifactId>
+						    <configuration>
+						      	<useModulePath>false</useModulePath>
+						    </configuration>
+						</plugin>
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
