--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,9 @@
         "vmArgs": [
             "-Djava.util.logging.config.file=src/test/resources/logging.properties"
         ]
+    },
+    "sonarlint.connectedMode.project": {
+        "connectionId": "exasol",
+        "projectKey": "com.exasol:error-catalog"
     }
 }
