--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <description>Tooling for crawling all error codes and generating a online error catalog.</description>
     <url>https://github.com/exasol/error-catalog/</url>
     <properties>
-        <junit.version>5.10.1</junit.version>
+        <junit.version>5.11.3</junit.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,12 +31,12 @@
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>4.7.5</version>
+            <version>4.7.6</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.parsson</groupId>
             <artifactId>parsson</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -60,13 +60,13 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>2.2</version>
+            <version>3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.15.6</version>
+            <version>3.17.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -82,7 +82,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>4.4.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -94,7 +94,7 @@
             <plugin>
                 <groupId>org.itsallcode</groupId>
                 <artifactId>openfasttrace-maven-plugin</artifactId>
-                <version>1.6.1</version>
+                <version>2.2.0</version>
                 <executions>
                     <execution>
                         <id>trace-requirements</id>
@@ -107,7 +107,6 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>3.6.0</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/assembly/all-dependencies.xml</descriptor>
@@ -128,14 +127,13 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.5.0</version>
                 <configuration>
                     <executable>java</executable>
                     <arguments>
                         <argument>-classpath</argument>
-                        <classpath />
-                        <argument>
-                            -Djava.util.logging.config.file=src/test/resources/logging.properties</argument>
+                        <classpath/>
+                        <argument>-Djava.util.logging.config.file=src/test/resources/logging.properties</argument>
                         <argument>com.exasol.errorcodecatalog.ErrorCatalog</argument>
                         <argument>--report-repo</argument>
                         <argument>target/reports</argument>
